--- a/drone/package.json
+++ b/drone/package.json
@@ -17,9 +17,11 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/leaflet": "^1.7.9",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "firebase": "^9.6.10",
+    "leaflet": "^1.8.0",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
